crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_select_many_items.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                    ┌ Select Option ───────────────────────┐                    "
"                    │> Option 1                            │                    "
"                    │  Option 2                            │                    "
"                    │  Option 3                            │                    "
"                    │  Option 4                            │                    "
"                    │  Option 5                            │                    "
"                    │  Option 6                            │                    "
"                    │  Option 7                            │                    "
"                    │  Option 8                            │                    "
"                    │  Option 9                            │                    "
"                    │  Option 10                           │                    "
"                    │  Option 11                           │                    "
"                    │  Option 12                           │                    "
"                    │  Option 13                           │                    "
"                    │  Option 14                           │                    "
"                    │  Option 15                           │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
