crates/crucible-cli/tests/snapshots/tui_snapshot_tests__interactive_panel_json.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: json
---
{
  "header": "Select database",
  "items": [
    {
      "label": "PostgreSQL",
      "description": "Full-featured RDBMS"
    },
    {
      "label": "SQLite"
    }
  ],
  "hints": {
    "filterable": true,
    "multi_select": false,
    "allow_other": true
  }
}
