crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_basic_select.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Select database ─────────────────────┐                    "
"                    │> PostgreSQL - Full-featured RDBMS    │                    "
"                    │  SQLite - Embedded, single-file      │                    "
"                    │  MongoDB - Document store            │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
