crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_confirm_yes_no.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Delete this file? ───────────────────┐                    "
"                    │> Yes                                 │                    "
"                    │  No                                  │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
