crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_items_without_desc.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Pick a color ────────────────────────┐                    "
"                    │> Red                                 │                    "
"                    │  Green                               │                    "
"                    │  Blue                                │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
