crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_multi_select_json.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: json
---
{
  "header": "Select features",
  "items": [
    {
      "label": "Auth"
    },
    {
      "label": "Logging"
    },
    {
      "label": "Caching"
    }
  ],
  "hints": {
    "filterable": false,
    "multi_select": true,
    "allow_other": false,
    "initial_selection": [
      0,
      2
    ]
  }
}
